# uptime-kuma-infrastructure

./: .gitignore  CLAUDE.md  LICENSE  README.md  generate_host_config.sh  init_server_config.sh
docker/: README.md  docker-compose.yml
docker/auto-monitor/: .env.example  README.md  pyproject.toml  sync_monitors.py
